<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DistributedAlgos</string>
    <string name="action_settings">Beállítások</string>
    <string name="hello_world">Hello world!</string>
    <string name="sensors">Sensors</string>
    <string name="acc">Acceleration</string>
    <string name="li">Light</string>
    <string name="temp">Temperature</string>
    <string name="acceleration">AccelerationData</string>
    <string name="light">LightData</string>
    <string name="temperature">TemperatureData</string>
    <string name="fine_location">Fine Location</string>
    <string name="calls">Calls</string>
    <string name="call">CallData</string>
    <string name="location">LocationData</string>
    <string name="gyroscope">GyroscopeData</string>
    <string name="sms">SmsData</string>
    <string name="communicationStop">Kommunikáció leállítása</string>
    <string name="packages">PackageData</string>
    <string name="connectivity">ConnectivityData</string>
    <string name="battery">BatteryData</string>
    <string name="proximity">ProximityData</string>
    <string name="orientation">OrientationData</string>
    <string name="screen">ScreenData</string>
    <string name="image">ImageData</string>
    <string name="traffic">TrafficData</string>
    
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="communication_details">Kommunikáció részletei</string>
    <string name="dec_node_ip">decNodeIP</string>
    <string name="dec_node_port">decNodePort</string>
    <string name="dec_node_protocol">decNodeProtocol</string>
    <string name="dec_admin_ip">decAdminIP</string>
    <string name="dec_admin_port">decAdminPort</string>
    <string name="data_collector_protocol">dataCollectorProtocol</string>
    <string name="welcome_to_distributedalgos">Welcome to DistributedAlgos!</string>
    <string name="welcome_long">Az alábbiakban megadhatod a szerverek címét, majd a regisztrációt követően elnavigálunk a főoldalra. Ezután a Beállításokban engedélyezhetsz adatgyűjtéseket.\n
        Érzékeny adatokat a beállításoktól függetlenül minden esetben titkosított csatornán küldünk ki!</string>
    <string name="node_szerver_settings">Node szerver beállítások</string>
    <string name="default_dec_node_ip">node-dec.rhcloud.com</string>
    <string name="default_dec_node_port">3000</string>
    <string name="default_dec_node_port_https">3002</string>
    <string name="default_dec_node_protocol">http</string>
    <string name="gcm_szerver_settings">GCM szerver beállítások</string>
    <string name="default_dec_admin_ip">admin-dec.rhcloud.com</string>
    <string name="default_dec_admin_port">8080</string>
    <string name="default_dec_admin_port_https">8443</string>
    <string name="data_collector_szerver_settings">DataCollector szerver beállítások</string>
    <string name="default_data_collector_ip">datacollector-distributedalgos.rhcloud.com</string>
    <string name="default_data_collector_protocol">https</string>
    <string name="default_data_collector_port">3001</string>
    <string name="default_data_collector_port_https">3003</string>
    <string name="save_start">Mentés</string>
    <string name="settings">Beállítások</string>
    <string name="take_picture">Képkészítés</string>
    <string name="sync">Szinkronizáció</string>
    <string name="protocolHTTP">HTTP</string>
    <string name="protocolHTTPS">HTTPS</string>
    <string name="ip">Hoszt</string>
    <string name="port">port</string>
    <string name="algorithm">Algorithm</string>
    <string name="no_data">Nincs megjelenítendő adat...</string>
    

</resources>