<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/skyBlue"
        android:padding="5dp"
        android:text="@string/gcm_szerver_settings"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" >

        <TableRow>

            <EditText
                android:id="@+id/gcmAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_span="2"
                android:hint="@string/ip"
                android:text="@string/default_dec_node_ip" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/radioButtonGCMHTTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocolHTTP"
                android:checked="true"
                android:onClick="changeProtocol" />

            <EditText
                android:id="@+id/gcmPortHTTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/port"
                android:text="@string/default_dec_admin_port" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/radioButtonGCMHTTPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocolHTTPS"
                android:onClick="changeProtocol" />

            <EditText
                android:id="@+id/gcmPortHTTPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/port"
                android:text="@string/default_dec_admin_port_https" />
        </TableRow>
    </TableLayout>

</LinearLayout>