<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/skyBlue"
        android:padding="5dp"
        android:text="@string/node_szerver_settings"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />


            <EditText
                android:id="@+id/nodeAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_span="2"
                android:hint="@string/ip"
                android:text="@string/default_dec_node_ip" />
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" >
        
        <TableRow>

            <RadioButton
                android:id="@+id/radioButtonNodeHTTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/protocolHTTP"
                android:onClick="changeProtocol" />

            <EditText
                android:id="@+id/nodePortHTTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/port"
                android:text="@string/default_dec_node_port" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/radioButtonNodeHTTPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocolHTTPS"
                android:onClick="changeProtocol" />

            <EditText
                android:id="@+id/nodePortHTTPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/port"
                android:text="@string/default_dec_node_port_https" />
        </TableRow>
    </TableLayout>

</LinearLayout>