<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >
        
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tableName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_distributedalgos"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_long"
            android:lines="4"/>

        <TableLayout
            android:id="@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
           <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/node_szerver_ip_s_port"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText android:id="@+id/nodeAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_dec_node_ip"/>
                
                <EditText android:id="@+id/nodePort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_dec_node_port"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gcm_szerver_ip_s_port"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

               <EditText android:id="@+id/gcmAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_dec_node_ip"/>
               
               <EditText android:id="@+id/gcmPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_dec_admin_port"/>
            </TableRow>
            
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

               <Button
                   android:id="@+id/saveButton"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:onClick="onSave"
                   android:text="@string/save_start"
                   android:focusableInTouchMode="true" 
                   android:focusable="true" >
                   <requestFocus/>
               </Button>

            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>